# OAPCE-BI-MT

./: .env.example  .gitignore  .replit  Agents.md  DEMO_README.md  DEPLOYMENT_README.md  INTEGRATION_README.md  MARKET_CUSTOMIZATION_GUIDE.md  ONVIO_README.md  SPRINT_ROADMAP.md  USER_GUIDE.md  ZERO_BUDGET_ROADMAP.md  agent_scheduler.py  agent_scheduler_fixed.py  agents_ui.py  anomaly_detector.py  app.py  auth.py  automated_reporting_dispatcher.py  catalog.py  catalog_export.json  check_overdues.py  check_predictions.py  check_summary.py  create_demo_images.py  create_ssbf_tables.py  create_video.py  create_video_fixed.py  create_video_simple.py  data_import_manager.py  data_pipeline.py  data_quality.py  data_sync.py  database.py  database_config.py  demo_generator.py  demo_master.ps1  demo_master.py  demo_simple.ps1  demo_simple.sh  (+62 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml  index.html
StreamlitBase/: .replit  Home.py  app.py  db_utils.py  pyproject.toml  replit.md
attached_assets/: Pasted-Entendido-He-analizado-la-discrepancia-entre-el-Roadmap-OAPCE-Multitrans-Adaptado-md-y-la-PROPUE-1761526573689_1761526573690.txt
backups/: full_backup_20251029_121712.json  full_backup_20251030_145654.json  full_backup_20251030_221739.json
config/: calidad.yaml
data_templates/: template_actividades_venta_20251029_120630.xlsx  template_actividades_venta_20251029_121701.xlsx  template_actividades_venta_20251030_145718.xlsx  template_actividades_venta_20251030_205359.xlsx  template_actividades_venta_20251030_213420.xlsx  template_clientes_20251029_120619.xlsx  (+20 more)
(+30 files in other folders)
